--- a/src/app/imagemanager/components/edit-image/edit-image.component.scss
+++ b/src/app/imagemanager/components/edit-image/edit-image.component.scss
@@ -16,4 +16,12 @@
   &-title {
     text-align: center;
   }
+
+  &-error-actions {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
+    flex-wrap: wrap;
+  }
 }
