--- a/src/app/imagemanager/components/sidenav/sidenav.component.html
+++ b/src/app/imagemanager/components/sidenav/sidenav.component.html
@@ -39,9 +39,8 @@
         <a
           mat-button
           style="width: 100%; text-align: left"
-          href="#"
+          href="https://github.com/dmitev2000/mca-image-manager"
           target="_blank"
-          disabled="true"
         >
           Source code
         </a>
